# mfm

./: LICENSE.txt  README.md  meson.build  pyproject.toml
mfm/: __init__.py  meson.build
mfm/fmath/: fmath.f  fmath.pyf  fmathmodule.c  fmathmodule.c.orig  meson.build
mfm/tests/: test_class.py
pyodide_recipe/: meta.yaml
